yaml/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"ollama"},{"apiVersion":"apps/v1","kind":"Deployment","name":"mosquitto"}]'
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/kwkoo/threat-frontend
        name: frontend
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: "/frontend/config"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources: {}
      volumes:
      - name: config
        configMap:
          name: frontend-config
status: {}
